--- a/index.html
+++ b/index.html
@@ -1,3 +1,210 @@
----
-layout: home
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/static/images/favicon.png" />
+    <link rel="apple-touch-icon" href="/static/images/logo192.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#fff" />
+    <meta
+      name="description"
+      content="Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React and Firebase. Passionate about delivering high-quality, well-documented code. Always open to new opportunities."
+    />
+    <title>Rajendra Bhochalya | Web & mobile app developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/static/css/normalize.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
+
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@rkbhochalya" />
+    <meta name="twitter:creator" content="@rkbhochalya" />
+    <meta name="twitter:title" content="Rajendra Bhochalya" />
+    <meta
+      name="twitter:description"
+      content="Self-taught dev w/ 10 yrs exp in WordPress, React, React Native, Node.js & Firebase. Delivering quality, well-documented code. Always open for new opps. Check out my work! #devlife #webdev #javascript"
+    />
+    <meta
+      name="twitter:image"
+      content="https://rajendrakumar.com/static/images/raj.jpg"
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Rajendra Bhochalya" />
+    <meta
+      property="og:description"
+      content="Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React and Firebase. Passionate about delivering high-quality, well-documented code. Always open to new opportunities. Check out my work on my website! #developerlife #webdevelopment #javascript"
+    />
+    <meta
+      property="og:image"
+      content="https://rajendrakumar.com/static/images/raj.jpg"
+    />
+    <meta property="og:url" content="https://rajendrakumar.com" />
+    <meta property="og:site_name" content="Rajendra Bhochalya" />
+    <meta property="og:type" content="website" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <div class="site-title">Rajendra Bhochalya</div>
+        <nav>
+          <a href="#contact">Contact</a>
+        </nav>
+      </header>
+
+      <main class="main">
+        <div class="hero">
+          <div class="hero-image">
+            <img
+              src="/static/images/raj.jpg"
+              alt="Rajendra Bhochalya with his son"
+            />
+          </div>
+          <div class="hero-text">
+            <h1>
+              Hey, I'm Raj, a web & mobile app developer based in Jaipur, India.
+            </h1>
+            <div class="social-links">
+              <a
+                href="https://www.linkedin.com/in/rkbhochalya/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="linkedin"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                  <path
+                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
+                    fill="currentColor"
+                  />
+                </svg>
+                <span>LinkedIn</span>
+              </a>
+              <a
+                href="https://github.com/rkbhochalya"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="github"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                  <path
+                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
+                    fill="currentColor"
+                  />
+                </svg>
+                <span>GitHub</span>
+              </a>
+              <a
+                href="https://twitter.com/rkbhochalya"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="twitter"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <path
+                    d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
+                    fill="currentColor"
+                  />
+                </svg>
+                <span>Twitter</span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div id="bio" class="bio">
+          <p>
+            I'm a highly motivated self-taught software developer with over a
+            decade of experience. My journey in software development began when
+            I left college to pursue my passion, and since then I have been
+            working on a wide range of projects. I have extensive experience
+            creating custom WordPress sites, mobile apps using React Native, web
+            apps using React and Firebase, and Shopify apps with Node.js. I have
+            also played with numerous other technologies, tools, and frameworks
+            over time, and have contributed to many open-source projects.
+          </p>
+          <p>
+            I pride myself on creating clean, well-formatted, and properly
+            documented code that is easy to maintain. My perfectionist approach
+            ensures that every project I deliver meets the highest standards. I
+            always ask myself, "If I were the client, would I be happy with
+            this?" This mindset has helped me to deliver excellent projects for
+            my clients and build a reputation for quality work.
+          </p>
+          <p>
+            I've had the pleasure of working on a number of exciting projects,
+            such as
+            <a href="https://earth.fm" target="_blank" rel="noopener noreferrer"
+              >earth.fm</a
+            >,
+            <a
+              href="https://ecommerce-platforms.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              >ecommerce-platforms.com</a
+            >,
+            <a
+              href="https://plumvillage.app"
+              target="_blank"
+              rel="noopener noreferrer"
+              >plumvillage.app</a
+            >,
+            <a
+              href="https://ethical.net"
+              target="_blank"
+              rel="noopener noreferrer"
+              >ethical.net</a
+            >
+            and several other projects as a lead developer. These projects have
+            not only helped me grow as a developer, but also as a person.
+          </p>
+          <p>
+            I'm also a married father of one, and an avid book lover, with
+            aspirations of one day writing my own book. In my free time, I enjoy
+            reading and learning new things to improve my skillset and stay
+            up-to-date with the latest trends in software development.
+          </p>
+          <p>
+            If you have an exciting app or website idea, don't hesitate to reach
+            out to me at [my first and last name]@gmail.com or use the contact
+            form below. I'm always open to new opportunities and would be happy
+            to discuss how I can help bring your idea to life.
+          </p>
+        </div>
+
+        <div id="contact" class="contact">
+          <h2>Get in touch</h2>
+          <form action="https://formspree.io/f/mbjqvnrb" method="POST">
+            <label>
+              <span>Email:</span>
+              <input
+                type="email"
+                name="email"
+                placeholder="Your email address"
+                required
+              />
+            </label>
+            <label>
+              <span>Subject:</span>
+              <input name="subject" required placeholder="Something short, sweet & catchy ;)" />
+            </label>
+            <label>
+              <span>Message:</span>
+              <textarea name="message" required minlength="120" rows="8" placeholder="The floor is all yours ✨"></textarea>
+            </label>
+            <button type="submit">Send</button>
+          </form>
+        </div>
+      </main>
+      <footer class="footer">
+        <div class="copyright">
+          © Rajendra Bhochalya
+        </div>
+      </footer>
+    </div>
+  </body>
+</html>
