Improve heading & meta description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#fff" />
     <meta
       name="description"
-      content="Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React and Firebase. Passionate about delivering high-quality, well-documented code. Always open to new opportunities."
+      content="Rajendra Bhochalya, experienced web & mobile app developer. Specializing in WordPress, React, React Native, Node.js & Firebase. Based in Jaipur, India."
     />
     <title>Rajendra Bhochalya | Web & mobile app developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -82,7 +82,7 @@
           </div>
           <div class="hero-text">
             <h1>
-              Hey, I'm Raj, a web & mobile app developer based in Jaipur, India.
+              Hey, I'm Raj - a web and mobile app developer based in Jaipur, India.
             </h1>
             <div class="social-links">
               <a
