--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="apple-touch-icon" href="/static/images/logo192.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#fff" />
+    <meta name="theme-color" content="#161e40" media="(prefers-color-scheme: dark)" />
     <meta
       name="description"
       content="Rajendra Bhochalya, experienced web & mobile app developer. Specializing in WordPress, React, React Native, Node.js & Firebase. Based in Jaipur, India."
