Dark mode support for theme-color on mobile safari

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
     <link rel="stylesheet" href="/static/css/normalize.css" />
     <link rel="stylesheet" href="/static/css/style.css" />
+    <script src="/static/js/main.js" defer></script>
 
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary" />
