Add JSON-LD schema

--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
 
       gtag("config", "G-EDWY42XQHP");
     </script>
+
+    <!-- JSON-LD Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Rajendra Bhochalya",
+        "description": "Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React. Passionate about delivering high-quality, well-documented code. Always open to new opportunities.",
+        "url": "https://rajendrakumar.com/",
+        "image": "https://rajendrakumar.com/static/images/raj.jpg",
+        "sameAs": [
+          "https://twitter.com/rkbhochalya",
+          "https://www.linkedin.com/in/rkbhochalya/",
+          "https://github.com/rkbhochalya"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div class="page">
