Optimize content: replace firebase with gatsby & next.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#161e40" media="(prefers-color-scheme: dark)" />
     <meta
       name="description"
-      content="Rajendra Bhochalya, experienced web & mobile app developer. Specializing in WordPress, React, React Native, Node.js & Firebase. Based in Jaipur, India."
+      content="Rajendra Bhochalya, experienced web & mobile app developer. Specializing in WordPress, React, React Native, Node.js, Gatsby & Next.js. Based in Jaipur, India."
     />
     <title>Rajendra Bhochalya | Web & mobile app developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,7 +29,7 @@
     <meta name="twitter:title" content="Rajendra Bhochalya" />
     <meta
       name="twitter:description"
-      content="Self-taught dev w/ 10 yrs exp in WordPress, React, React Native, Node.js & Firebase. Delivering quality, well-documented code. Always open for new opps. Check out my work! #devlife #webdev #javascript"
+      content="Self-taught dev w/ 10 yrs exp in WordPress, React, React Native, Node.js, Gatsby & Next.js. Delivering quality, well-documented code. Always open for new opps. Check out my work! #devlife #webdev #javascript"
     />
     <meta
       name="twitter:image"
@@ -40,7 +40,7 @@
     <meta property="og:title" content="Rajendra Bhochalya" />
     <meta
       property="og:description"
-      content="Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React and Firebase. Passionate about delivering high-quality, well-documented code. Always open to new opportunities. Check out my work on my website! #developerlife #webdevelopment #javascript"
+      content="Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React-based frameworks. Passionate about delivering high-quality, well-documented code. Always open to new opportunities. Check out my work on my website! #developerlife #webdevelopment #javascript"
     />
     <meta
       property="og:image"
@@ -71,7 +71,7 @@
         "@context": "https://schema.org/",
         "@type": "Person",
         "name": "Rajendra Bhochalya",
-        "description": "Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React. Passionate about delivering high-quality, well-documented code. Always open to new opportunities.",
+        "description": "Self-taught software developer with a decade of experience creating custom WordPress sites, mobile apps using React Native, web apps using React-based frameworks. Passionate about delivering high-quality, well-documented code. Always open to new opportunities.",
         "url": "https://rajendrakumar.com/",
         "image": "https://rajendrakumar.com/static/images/raj.jpg",
         "sameAs": [
@@ -157,7 +157,7 @@
             I left college to pursue my passion, and since then I have been
             working on a wide range of projects. I have extensive experience
             creating custom WordPress sites, mobile apps using React Native, web
-            apps using React and Firebase, and Shopify apps with Node.js. I have
+            apps using React-based frameworks, and Shopify apps with Node.js. I have
             also played with numerous other technologies, tools, and frameworks
             over time, and have contributed to many open-source projects.
           </p>
