Set explicit width and height to hero image

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
           <div class="hero-image">
             <img
               src="/static/images/raj.jpg"
+              width="128"
+              height="128"
               alt="Rajendra Bhochalya with his son"
             />
           </div>
